k8s/20-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: workshop
  labels:
    app: postgres
spec:
  clusterIP: None   # Headless pour StatefulSet
  selector:
    app: postgres
  ports:
  - name: pg
    port: 5432
    targetPort: 5432
