k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: workshop
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 80
